所有规则添加错误内容，精确的定位信息

--- a/test/rule/css/decl-comma.css
+++ b/test/rule/css/decl-comma.css
@@ -1,6 +1,6 @@
-html{
+html {
     font-family: Arial, sans-serif,微软雅黑;
     transition-property: width,
-    height;
+    height,  margin;
     margin: 10px;
 }
