--- a/test/rule/css/require-transition-property.css
+++ b/test/rule/css/require-transition-property.css
@@ -1,6 +1,7 @@
 div {
     transition: all 1s linear;
     transition: width 2s ease-in-out;
-    transition-property: all;
+    transition-property: all,
+    all;
     transition-property: ALl;
 }
