--- a/test/rule/css/without-bom.css
+++ b/test/rule/css/without-bom.css
@@ -1,6 +1,6 @@
 ﻿
 #ccc .fff .qqq,
-#ccc .fff a.cwsirrss_entry-source-title,
-#ccc .fff a.cwsirrss_entry-post-author-name {
+#ccc .fff .cwsirrss_entry-source-title,
+#ccc .fff .cwsirrss_entry-post-author-name {
     color: #15c;
 }
